@@ -29,10 +29,14 @@
       \item \code{axis()} gets new option \code{gap.axis = NA} for
       specifying a multiplication factor for the minimal \dQuote{gap}
       (distance) between axis labels drawn.   Its default is \code{1}
-      for labels \emph{parallel} to the axis, and \code{0.5} for
+      for labels \emph{parallel} to the axis, and \code{0.25} for
       perpendicular ones.
 
       These (perpendicular labels) no longer overlap, fixing bug \PR{17384}.
+
+      \item \code{plot.default()} gains new arguments \code{xgap.axis = NA}
+      and \code{ygap.axis = NA} to be passed to the x-- and y--
+      \code{axis(.., gap.axis=*)} calls.
 
       \item \code{removeSource()} now works not only for functions but
       also for some language objects.
